Fix/responsive layout bugs (#148)
* Feature: Update primary search button styling and class assignment

* Feature: Enhance HTML editor modal layout and styling

* Feature: Improve layout and styling of editor components in AdvancedPageBuilderSettings

* Feature: Bump version to 3.4.68 in package.json

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -261,7 +261,7 @@
   }
 
   .pbx-myPrimarySearchButton {
-    @apply pbx-rounded-r-full pbx-text-sm lg:pbx-pl-8 lg:pbx-pr-10 pbx-pl-4 pbx-pr-4 pbx-text-center pbx-border-l pbx-border-gray-300 pbx-font-medium hover:pbx-bg-gray-200;
+    @apply pbx-myPrimaryButton pbx-m-1;
   }
 
   /*
